// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "autoload": false,
      "border": false,
      "controls": "reload",
      "fit": "scale",
      "initalZoom": 1,
      "type": "media",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node with media defaults 1`] = `
Object {
  "data": Object {
    "content": Object {
      "autoload": false,
      "border": false,
      "controls": "reload",
      "fit": "scale",
      "initalZoom": 1,
      "type": "media",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`IFrame Converter oboToSlate converts an OboNode to a Slate node with webpage defaults 1`] = `
Object {
  "data": Object {
    "content": Object {
      "autoload": false,
      "border": true,
      "controls": "zoom,reload,new-window",
      "fit": "scroll",
      "initalZoom": 1,
      "type": "webpage",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`IFrame Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
